# Front-End

./: .gitignore  .gitmodules  2_GettingStarted.txt  3_HowToGuides.txt  4_Science.txt  5_TechReference.txt  6.1_Download.txt  6.2_Installation.txt  7_ReleaseNotes.txt  8_People.txt  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile-data-prep  LICENSE  README.md  README.txt  buildscript.sh
.github/workflows/: docker-build-command.sh  docker-image.yml
data/applications/: AppRun  FeTS.desktop
data/cwlFiles/: BraTSPipeline.cwl  DeepMedic.cwl  FeTS_CLI.cwl  FullProcessingPipeline.cwl  OpenFLCLI.cwl  PrepareDataset.cwl  Preprocessing.cwl  Utilities.cwl
data/fets/: README.md  cert_chain.crt  deepscan_inference.yaml  network.yaml  nnunet_inference.yaml  pt_3dresunet_brainmagebrats.yaml  pt_3dresunet_ss_brainmagebrats.yaml
data/fets/3DResUNet/: 202001130910.yml  202001141115.yml  202001161051.yml
data/fets/3DUNet/: 202001160910.yml
data/fets/deepscan/: 202012061513.yml
docs/: README.md  _config.yaml  extras.md  index.md  itcr_connectivity.md  process_data.md  rano_federation.md  runningApplication.md  setup.md
docs/_includes/: navigation.html
docs/_layouts/: default.html  full.html
docs_sources/: CMakeLists.txt
licenses/: Combined.txt
mlcubes/: .gitignore
mlcubes/data_preparation/mlcube/: mlcube.yaml  stages.yaml
mlcubes/data_preparation/project/: Dockerfile  Dockerfile.dev  mlcube.py  prepare.py  requirements.txt  sanity_check.py  statistics.py
scripts/: README.md  captk-pkg  linux-makeself
src/: CaPTk.cxx
src/applications/: BraTSPipeline.cxx  CMakeLists.txt  CreateCSVForDICOMs.py  FeTS_CLI.cxx  FeTS_CLI_Inference.cxx  FeTS_CLI_Segment.cxx  FeTS_CLI_Train.cxx  FeTS_CLI_Validation.cxx  FullProcessingPipeline.cxx  OpenFLCLI.cxx  Phase2_IntensityCheck.py  PrepareDataset.cxx  PrepareDataset.py  README.md  SanityCheck.py  __init__.py  setup.py
src/applications/Preprocessing/: README.md
src/applications/Preprocessing/greedy/: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md
src/applications/Preprocessing/greedy/CMake/: External-ITK.cmake  PYVersion.cmake  Package.cmake
src/applications/Preprocessing/greedy/docs/: Makefile  about.rst  conf.py  index.rst  install.rst  quick_start.rst  reference.rst
src/applications/Preprocessing/greedy/docs/usage/: greedy_usage_affine.txt  stackg_usage_init.txt  stackg_usage_main.txt  stackg_usage_recon.txt  stackg_usage_splat.txt  stackg_usage_voliter.txt  stackg_usage_volmatch.txt
src/applications/Preprocessing/greedy/matlab/diff/: diff_objective.m  diff_objective_gateux_deriv.m  diff_objective_simple.m  diffopmat.m  diffopt.m  diffplot.m  elcallback.m  elevolve.m  elupdate.m  expmap.m  expmap_euler.m  expmap_gateaux_deriv.m  expmap_semi_lagrange.m  generate_test_fft.m  gridplot.m  image_downsample.m  image_upsample.m  lddmm_basic.m  lddmm_compose_diffeomorphisms.m  lddmm_example_cee_to_circ.m  lddmm_hilbert_dot_product.m  lddmm_init.m  lddmm_integrate_field_and_jacobian_semi_lagrangian.m  lddmm_integrate_field_euler.m  lddmm_integrate_field_semi_lagrangian.m  lddmm_jacobian_determinant.m  lddmm_objective_and_gateaux.m  lddmm_objective_and_gradient.m  lddmm_optimize.m  lddmm_optimize_basic.m  lddmm_optimize_lbgfs.m  lddmm_phi_gateaux.m  lddmm_plot_field.m  lddmm_plot_greens_function.m  lddmm_plot_problem.asv  lddmm_plot_problem.m  lddmm_plot_problem_simple.m  lddmm_random_field.m  lddmm_register_multiscale.m  lddmm_reparameterize_vector_field.m  (+14 more)
src/applications/Preprocessing/greedy/matlab/diff/depthmap/: depthmap.m  runme.m
src/applications/Preprocessing/greedy/matlab/diff/results/: Thumbs.db  c_to_o_iteration_8.eps  oh_to_cee_example.eps  oh_to_cee_example_more_timesteps.eps
src/applications/Preprocessing/greedy/src/: AffineCostFunctions.cxx  AffineCostFunctions.h  AffineTransformUtilities.h  CommandLineHelper.h  GreedyAPI.cxx  GreedyAPI.h  GreedyException.h  GreedyParameters.cxx  GreedyParameters.h  GreedyVersion.cxx.in  GreedyWrapper.cxx  MultiImageRegistrationHelper.cxx  MultiImageRegistrationHelper.h  cbicaCmdParser.cpp  cbicaUtilities.cpp  greedy_main.cxx  greedy_stack_reg.cxx  lddmm_data.cxx  lddmm_data.h  lddmm_main.cxx  macf_optimization.cxx
src/applications/Preprocessing/greedy/src/ITKFilters/include/: FastWarpCompositeImageFilter.txx  LieBracketFilter.hxx  MultiComponentImageMetricBase.h  MultiComponentImageMetricBase.txx  MultiComponentMetricReport.h  MultiComponentMutualInfoImageMetric.h  MultiComponentNCCImageMetric.txx  MultiImageSimpleWarpImageFilter.txx
src/applications/Preprocessing/greedy/src/bk/: SimpleWarpImageFilter.h  SimpleWarpImageFilter.txx  greedy_main.cxx  itkGaussianInterpolateImageFunction.h  itkOptLinearInterpolateImageFunction.txx  itkOptVectorLinearInterpolateImageFunction.h  lddmm_common.h  lddmm_data.cxx  lddmm_data.h  lddmm_main.cxx
src/applications/Preprocessing/greedy/src/dijkstra/: BinaryHeap.h  ShortestPath.cxx  ShortestPath.h
src/applications/Preprocessing/greedy/src/macf/: macf_fixed_point_inverse.cxx  macf_gradient.cxx  macf_objective_and_delta.cxx  macf_objective_and_gradient.cxx  macf_pyramid.cxx
src/applications/Preprocessing/greedy/utilities/: hexdump.c
src/applications/Utilities/: CMakeLists.txt  README.md
src/applications/Utilities/HausdorffCLI/: .gitignore  Hausdorff95.py  Hausdorff95.spec  README.md  runPyInstaller.py  setup.py
src/applications/Utilities/dcmqi/: azure-pipelines.yml
src/applications/Utilities/dcmqi/apps/: CMakeLists.txt
src/applications/Utilities/dcmqi/apps/paramaps/: CMakeLists.txt
src/applications/Utilities/dcmqi/apps/seg/: CMakeLists.txt
src/applications/Utilities/dcmqi/apps/sr/: CMakeLists.txt
src/applications/Utilities/dcmqi/doc/segContexts/resources/: SlicerGenericAnatomy.csv
src/applications/Utilities/dcmqi/include/: cbicaDCMQIWrapper.h
src/applications/Utilities/dcmqi/include/dcmqi/: QIICRConstants.h  framesorter.h
src/applications/Utilities/dcmqi/libsrc/: cbicaDCMQIWrapper.cpp
src/applications/Utilities/src/: Utilities.cxx
src/mlcubes/: .gitignore
testing/: CMakeLists.txt
(+42 files in other folders)
